HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeWait/Source/Main.uv
//! Rejected key-system specimen for a wait expression inside speculative execution.

public procedure speculativeWaitReference() -> i32 {
    var shared_value: shared i32 = 1
    %speculative write shared_value {
        let observed: i32 = wait shared_value
        shared_value = observed
    }
    return 0
}
